// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > adorns > matches the adorned markup snapshot 1`] = `
<div>
  <div
    class="form-input"
  >
    <span
      class="input-adorn"
    >
      $
    </span>
    <input
      aria-label="Amount"
      class="ghost-input"
      id="_r_1s_"
      tabindex="0"
      type="text"
      value=""
    />
    <span
      class="input-adorn"
    >
      USD
    </span>
  </div>
</div>
`;

exports[`TextInput > rendering > matches the baseline markup snapshot 1`] = `
<div>
  <input
    aria-label="Name"
    class="form-input"
    id="_r_6_"
    tabindex="0"
    type="text"
    value=""
  />
</div>
`;
